finalize aiohttp and httpx example for many downloads

--- a/web/download/httpx_example.ipynb
+++ b/web/download/httpx_example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,77 +48,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "async def fetch(url):\n",
-    "    async with httpx.AsyncClient() as client:\n",
-    "        response = await client.get(url)\n",
-    "        response.raise_for_status()\n",
-    "        content_type = response.headers.get('Content-Type', '')\n",
-    "        print(f\"{content_type = }, {response.encoding = }\")\n",
-    "        return response.content\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "async def download_binary_file(url, local_location, local_name):\n",
-    "    \"\"\"Download a binary file from a URL and save it to a local location with a specified name using httpx.\"\"\"\n",
-    "    async with httpx.AsyncClient() as client:\n",
-    "        response = await client.get(url)\n",
-    "        response.raise_for_status()\n",
-    "        content_type = response.headers.get('content-type')\n",
-    "        print(f\"{content_type = }, {response.encoding = }\")\n",
-    "        data = response.content\n",
-    "\n",
-    "    file_path = local_location / local_name\n",
-    "    with open(file_path, \"wb\") as f:\n",
-    "        f.write(data)\n",
-    "        print(f\"Saved to {file_path}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "async def process(url):\n",
-    "    name = Path(url).name\n",
-    "    name = Path(url).name\n",
-    "    second_last_part = Path(url).parts[-2]\n",
+    "async def fetch(client, url):\n",
+    "    response = await client.get(url)\n",
+    "    response.raise_for_status()\n",
+    "    print(f\"{url = }\")\n",
+    "    return response.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def process_many(urls):\n",
+    "    async def process_one_file(client, url):\n",
     "\n",
-    "    ## request and parse the HTML page\n",
-    "    response = await fetch(url)\n",
-    "    soup = BeautifulSoup(response, 'html.parser')\n",
-    "    # print(soup.prettify())\n",
+    "        # request the base HTML page\n",
+    "        name = Path(url).name\n",
+    "        second_last_part = Path(url).parts[-2]\n",
+    "        response = await fetch(client, url)\n",
     "\n",
-    "    ## find the resource URL\n",
-    "    def find_resource_url(soup, pattern):\n",
-    "        \"\"\"Find a resource URL in the HTML soup using a regex pattern.\"\"\"\n",
-    "        match = re.search(pattern, str(soup))\n",
-    "        if match:\n",
-    "            return match.group(0)\n",
-    "        return None\n",
+    "        # find the resource URL\n",
+    "        soup = BeautifulSoup(response, 'html.parser')\n",
+    "        pattern = r'file-examples\\.com/storage/\\w+/'\n",
+    "        matched_string = re.search(pattern, str(soup)).group(0)\n",
+    "        resource_url = f\"https://{matched_string}2017/{second_last_part}/{name}\"\n",
     "\n",
-    "    pattern = r'file-examples\\.com/storage/\\w+/'\n",
-    "    matched_string = find_resource_url(soup, pattern)\n",
-    "    print(f\"{matched_string = }\")\n",
+    "        ## download the file\n",
+    "        data = await fetch(client, resource_url)\n",
+    "        \n",
+    "        ## save the file\n",
+    "        location = Path(\".\") / \"data\"\n",
+    "        file_path = location / Path(url).name\n",
+    "        with open(file_path, \"wb\") as f:\n",
+    "            f.write(data)\n",
+    "            print(f\"Saving {name}\")\n",
     "\n",
-    "    resource_url = f\"https://{matched_string}2017/{second_last_part}/{name}\"\n",
-    "    print(f\"{resource_url = }\")\n",
-    "\n",
-    "    ## download the file\n",
-    "    location = Path(\".\") / \"data\"\n",
-    "\n",
-    "    print(f\"calling download_binary_file with \\n    {resource_url = }\\n    {location = }\\n    {name = }\")\n",
-    "    await download_binary_file(resource_url, location, name)\n"
+    "    async with httpx.AsyncClient() as client:\n",
+    "        tasks = [process_one_file(client, url) for url in urls]\n",
+    "        await asyncio.gather(*tasks)\n"
    ]
   },
   {
@@ -130,28 +103,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "content_type = 'text/html; charset=UTF-8', response.encoding = 'utf-8'\n",
-      "matched_string = 'file-examples.com/storage/fe0707c5116828d4b9ad356/'\n",
-      "resource_url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/02/zip_2MB.zip'\n",
-      "calling download_binary_file with \n",
-      "    resource_url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/02/zip_2MB.zip'\n",
-      "    location = WindowsPath('data')\n",
-      "    name = 'zip_2MB.zip'\n",
-      "content_type = 'application/zip', response.encoding = 'utf-8'\n",
-      "Saved to data\\zip_2MB.zip\n"
+      "url = 'https://file-examples.com/wp-content/storage/2017/02/file_example_XML_24kb.xml'\n",
+      "url = 'https://file-examples.com/wp-content/storage/2017/02/file_example_XLSX_5000.xlsx'\n",
+      "url = 'https://file-examples.com/wp-content/storage/2017/02/index.html'\n",
+      "url = 'https://file-examples.com/wp-content/storage/2017/02/file_example_JSON_1kb.json'\n",
+      "url = 'https://file-examples.com/wp-content/storage/2017/02/file_example_CSV_5000.csv'\n",
+      "url = 'https://file-examples.com/wp-content/storage/2017/02/zip_2MB.zip'\n",
+      "url = 'https://file-examples.com/wp-content/storage/2017/10/file-sample_150kB.pdf'\n",
+      "url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/02/file_example_XML_24kb.xml'\n",
+      "Saving file_example_XML_24kb.xml\n",
+      "url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/02/file_example_JSON_1kb.json'\n",
+      "Saving file_example_JSON_1kb.json\n",
+      "url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/10/file-sample_150kB.pdf'\n",
+      "Saving file-sample_150kB.pdf\n",
+      "url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/02/file_example_XLSX_5000.xlsx'\n",
+      "Saving file_example_XLSX_5000.xlsx\n",
+      "url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/02/file_example_CSV_5000.csv'\n",
+      "Saving file_example_CSV_5000.csv\n",
+      "url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/02/index.html'\n",
+      "Saving index.html\n",
+      "url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/02/zip_2MB.zip'\n",
+      "Saving zip_2MB.zip\n"
      ]
     }
    ],
    "source": [
-    "url = \"https://file-examples.com/wp-content/storage/2017/02/zip_2MB.zip\"\n",
-    "await process(url)"
+    "urls = [\n",
+    "    \"https://file-examples.com/wp-content/storage/2017/02/zip_2MB.zip\",\n",
+    "    \"https://file-examples.com/wp-content/storage/2017/10/file-sample_150kB.pdf\",\n",
+    "    \"https://file-examples.com/wp-content/storage/2017/02/file_example_JSON_1kb.json\",\n",
+    "    \"https://file-examples.com/wp-content/storage/2017/02/file_example_XML_24kb.xml\",\n",
+    "    \"https://file-examples.com/wp-content/storage/2017/02/index.html\",\n",
+    "    \"https://file-examples.com/wp-content/storage/2017/02/file_example_XLSX_5000.xlsx\",\n",
+    "    \"https://file-examples.com/wp-content/storage/2017/02/file_example_CSV_5000.csv\",\n",
+    "]\n",
+    "\n",
+    "await process_many(urls)"
    ]
   },
   {
@@ -163,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
