--- a/web/download/aiohttp_example.ipynb
+++ b/web/download/aiohttp_example.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
     "        \n",
     "        ## save the file\n",
     "        location = Path(\".\") / \"data\"\n",
-    "        file_path = location / Path(url).name\n",
+    "        file_path = location / name\n",
     "        with open(file_path, \"wb\") as f:\n",
     "            f.write(data)\n",
     "            print(f\"Saving {name}\")\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -112,24 +112,24 @@
      "text": [
       "url = 'https://file-examples.com/wp-content/storage/2017/10/file-sample_150kB.pdf'\n",
       "url = 'https://file-examples.com/wp-content/storage/2017/02/index.html'\n",
-      "url = 'https://file-examples.com/wp-content/storage/2017/02/file_example_JSON_1kb.json'\n",
-      "url = 'https://file-examples.com/wp-content/storage/2017/02/file_example_XML_24kb.xml'\n",
-      "url = 'https://file-examples.com/wp-content/storage/2017/02/zip_2MB.zip'\n",
       "url = 'https://file-examples.com/wp-content/storage/2017/02/file_example_CSV_5000.csv'\n",
       "url = 'https://file-examples.com/wp-content/storage/2017/02/file_example_XLSX_5000.xlsx'\n",
+      "url = 'https://file-examples.com/wp-content/storage/2017/02/file_example_XML_24kb.xml'\n",
+      "url = 'https://file-examples.com/wp-content/storage/2017/02/file_example_JSON_1kb.json'\n",
+      "url = 'https://file-examples.com/wp-content/storage/2017/02/zip_2MB.zip'\n",
       "url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/02/file_example_XML_24kb.xml'\n",
       "Saving file_example_XML_24kb.xml\n",
       "url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/02/index.html'\n",
       "url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/02/file_example_JSON_1kb.json'\n",
       "Saving file_example_JSON_1kb.json\n",
       "url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/10/file-sample_150kB.pdf'\n",
+      "url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/02/file_example_XLSX_5000.xlsx'\n",
       "url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/02/file_example_CSV_5000.csv'\n",
       "Saving file-sample_150kB.pdf\n",
-      "url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/02/file_example_XLSX_5000.xlsx'\n",
+      "Saving file_example_XLSX_5000.xlsx\n",
       "url = 'https://file-examples.com/storage/fe0707c5116828d4b9ad356/2017/02/zip_2MB.zip'\n",
       "Saving file_example_CSV_5000.csv\n",
       "Saving index.html\n",
-      "Saving file_example_XLSX_5000.xlsx\n",
       "Saving zip_2MB.zip\n"
      ]
     }
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
