finalize find_r_bins

--- a/web/web_scraping/find_r_bins.ipynb
+++ b/web/web_scraping/find_r_bins.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "fcf267af",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f95a34d1",
    "metadata": {},
    "outputs": [],
@@ -49,11 +49,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "c59b1fb2",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# R scraping functions\n",
+    "\n",
     "def find_2nd_td_following_certain_td(soup, td_text) -> BeautifulSoup:\n",
     "    # Find the first <td> element that contains td_text\n",
     "    td = soup.find(\"td\", string=re.compile(td_text))\n",
@@ -86,11 +88,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "1c4308df",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# R scraping functions\n",
+    "\n",
     "ROOT_URL = \"https://cran.r-project.org\"\n",
     "\n",
     "def bin_link_scrap(page)-> str:\n",
@@ -114,11 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "4c84eaaf",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# R scraping functions - iterative process\n",
+    "\n",
     "async def get_r_bins(session, url, results=None, processed_urls=None) -> tuple:\n",
     "    if results is None:\n",
     "        results = set()\n",
@@ -143,24 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "68bef6f3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# download functions\n",
+    "\n",
     "def write_data_to_file(data, file_path):\n",
     "    if not file_path.exists():\n",
     "        with open(file_path, \"wb\") as f:\n",
-    "            f.write(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "3ef2102c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "            f.write(data)\n",
+    "\n",
     "async def down_load_r_bins(session, urls, zip_path):\n",
     "    \n",
     "    async def process_one_file(session, url, zip_path):\n",
@@ -181,26 +181,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "0338fdce",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# unzip functions\n",
+    "\n",
     "def unzip_file(zip_path, extract_to):\n",
     "    with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
-    "        zip_ref.extractall(extract_to)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "527c48f7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "async def process_zip_files(zip_files, extract_to):\n",
+    "        zip_ref.extractall(extract_to)\n",
+    "\n",
+    "async def process_zip_files(zip_files: list, extract_to:str):\n",
     "    async def process_one_file(zip_path, extract_to): \n",
-    "        mame = Path(zip_path).name\n",
+    "        stem = Path(zip_path).stem\n",
+    "        base_name = re.sub(r\"_\\d+(\\.\\d+)*$\", \"\", stem)\n",
+    "\n",
+    "        if Path(extract_to / base_name).exists():\n",
+    "            print(f\"{base_name} already exists, skipping unzipping.\")\n",
+    "            return\n",
+    "\n",
+    "        print(f\"unzipping {zip_path}\")\n",
     "        await asyncio.to_thread(unzip_file, zip_path, extract_to)\n",
     "\n",
     "    tasks = []\n",
@@ -208,46 +209,6 @@
     "        tasks.append(process_one_file(zip_file, extract_to))\n",
     "    await asyncio.gather(*tasks)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "569bf750",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Unzipped data\\zip\\zip_0.zip to data\\unzip\n",
-      "Unzipped data\\zip\\zip_1.zip to data\\unzip\n",
-      "Unzipped data\\zip\\zip_2.zip to data\\unzip\n",
-      "Unzipped data\\zip\\zip_3.zip to data\\unzip\n",
-      "Unzipped data\\zip\\zip_4.zip to data\\unzip\n",
-      "Unzipped data\\zip\\zip_5.zip to data\\unzip\n",
-      "Unzipped data\\zip\\zip_6.zip to data\\unzip\n",
-      "Unzipped data\\zip\\zip_7.zip to data\\unzip\n",
-      "Unzipped data\\zip\\zip_8.zip to data\\unzip\n",
-      "Unzipped data\\zip\\zip_9.zip to data\\unzip\n"
-     ]
-    }
-   ],
-   "source": [
-    "zip_files = list((Path(\".\") / \"data\" / \"zip\").glob(\"*.zip\"))\n",
-    "extract_to = Path(\".\") / \"data\" / \"unzip\"\n",
-    "for file in zip_files:\n",
-    "    with zipfile.ZipFile(file, 'r') as zip_ref:\n",
-    "        zip_ref.extractall(extract_to)\n",
-    "    print(f\"Unzipped {file} to {extract_to}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1a0e2a07",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -278,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "e8bd0212",
    "metadata": {},
    "outputs": [],
@@ -290,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "id": "9622843b",
    "metadata": {},
    "outputs": [
@@ -374,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "55561c21",
    "metadata": {},
    "outputs": [
@@ -382,60 +343,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/magrittr_2.0.3.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/MASS_7.3-65.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/fs_1.6.6.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/fontawesome_0.5.3.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/gtable_0.3.6.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/fansi_1.0.6.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/highr_0.11.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/digest_0.6.37.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/stringr_1.5.1.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/cachem_1.1.0.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/glue_1.8.0.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/scales_1.4.0.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/base64enc_0.1-3.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/jquerylib_0.1.4.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/rlang_1.1.6.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/ggplot2_3.5.2.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/lifecycle_1.0.4.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/mgcv_1.9-3.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/nnet_7.3-20.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/Hmisc_5.2-3.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/isoband_0.2.7.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/cluster_2.1.8.1.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/foreign_0.8-90.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/rmarkdown_2.29.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/bslib_0.9.0.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/withr_3.0.2.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/htmlwidgets_1.6.4.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/cli_3.6.5.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/labeling_0.4.3.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/pkgconfig_2.0.3.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/evaluate_1.0.3.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/pillar_1.10.2.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/vctrs_0.6.5.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/Formula_1.2-5.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/rpart_4.1.24.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/jsonlite_2.0.0.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/gridExtra_2.3.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/mime_0.13.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/rappdirs_0.3.3.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/backports_1.5.0.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/htmltools_0.5.8.1.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/knitr_1.50.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/tibble_3.2.1.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/Matrix_1.7-3.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/R6_2.6.1.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/viridisLite_0.4.2.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/checkmate_2.3.2.zip\n",
-      "downloading https://cran.r-project.org/bin/windows/contrib/4.5/RColorBrewer_1.1-3.zip\n"
+      "fansi_1.0.6.zip already exists, skipping download.\n",
+      "bslib_0.9.0.zip already exists, skipping download.\n",
+      "ggplot2_3.5.2.zip already exists, skipping download.\n",
+      "evaluate_1.0.3.zip already exists, skipping download.\n",
+      "rappdirs_0.3.3.zip already exists, skipping download.\n",
+      "mgcv_1.9-3.zip already exists, skipping download.\n",
+      "nnet_7.3-20.zip already exists, skipping download.\n",
+      "utf8_1.2.5.zip already exists, skipping download.\n",
+      "yaml_2.3.10.zip already exists, skipping download.\n",
+      "cachem_1.1.0.zip already exists, skipping download.\n",
+      "jquerylib_0.1.4.zip already exists, skipping download.\n",
+      "stringi_1.8.7.zip already exists, skipping download.\n",
+      "xfun_0.52.zip already exists, skipping download.\n",
+      "glue_1.8.0.zip already exists, skipping download.\n",
+      "labeling_0.4.3.zip already exists, skipping download.\n",
+      "htmlwidgets_1.6.4.zip already exists, skipping download.\n",
+      "jsonlite_2.0.0.zip already exists, skipping download.\n",
+      "cli_3.6.5.zip already exists, skipping download.\n",
+      "RColorBrewer_1.1-3.zip already exists, skipping download.\n",
+      "backports_1.5.0.zip already exists, skipping download.\n",
+      "fontawesome_0.5.3.zip already exists, skipping download.\n",
+      "farver_2.1.2.zip already exists, skipping download.\n",
+      "gtable_0.3.6.zip already exists, skipping download.\n",
+      "fastmap_1.2.0.zip already exists, skipping download.\n",
+      "stringr_1.5.1.zip already exists, skipping download.\n",
+      "memoise_2.0.1.zip already exists, skipping download.\n",
+      "fs_1.6.6.zip already exists, skipping download.\n",
+      "tinytex_0.57.zip already exists, skipping download.\n",
+      "knitr_1.50.zip already exists, skipping download.\n",
+      "R6_2.6.1.zip already exists, skipping download.\n",
+      "rmarkdown_2.29.zip already exists, skipping download.\n",
+      "viridis_0.6.5.zip already exists, skipping download.\n",
+      "pillar_1.10.2.zip already exists, skipping download.\n",
+      "foreign_0.8-90.zip already exists, skipping download.\n",
+      "lifecycle_1.0.4.zip already exists, skipping download.\n",
+      "cluster_2.1.8.1.zip already exists, skipping download.\n",
+      "htmltools_0.5.8.1.zip already exists, skipping download.\n",
+      "digest_0.6.37.zip already exists, skipping download.\n",
+      "htmlTable_2.4.3.zip already exists, skipping download.\n",
+      "checkmate_2.3.2.zip already exists, skipping download.\n",
+      "mime_0.13.zip already exists, skipping download.\n",
+      "rlang_1.1.6.zip already exists, skipping download.\n",
+      "pkgconfig_2.0.3.zip already exists, skipping download.\n",
+      "data.table_1.17.2.zip already exists, skipping download.\n",
+      "base64enc_0.1-3.zip already exists, skipping download.\n",
+      "colorspace_2.1-1.zip already exists, skipping download.\n",
+      "rpart_4.1.24.zip already exists, skipping download.\n",
+      "Matrix_1.7-3.zip already exists, skipping download.\n",
+      "rstudioapi_0.17.1.zip already exists, skipping download.\n",
+      "isoband_0.2.7.zip already exists, skipping download.\n",
+      "highr_0.11.zip already exists, skipping download.\n",
+      "sass_0.4.10.zip already exists, skipping download.\n",
+      "gridExtra_2.3.zip already exists, skipping download.\n",
+      "viridisLite_0.4.2.zip already exists, skipping download.\n",
+      "withr_3.0.2.zip already exists, skipping download.\n",
+      "tibble_3.2.1.zip already exists, skipping download.\n",
+      "MASS_7.3-65.zip already exists, skipping download.\n",
+      "Hmisc_5.2-3.zip already exists, skipping download.\n",
+      "vctrs_0.6.5.zip already exists, skipping download.\n",
+      "lattice_0.22-7.zip already exists, skipping download.\n",
+      "scales_1.4.0.zip already exists, skipping download.\n",
+      "Formula_1.2-5.zip already exists, skipping download.\n",
+      "magrittr_2.0.3.zip already exists, skipping download.\n"
      ]
     }
    ],
    "source": [
     "# throttle the download\n",
-    "number_of_simultaneous_downloads = 5\n",
+    "number_of_simultaneous_downloads = 4\n",
     "list_of_urls = list(results)\n",
     "\n",
     "async with aiohttp.ClientSession() as session:\n",
@@ -447,19 +423,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "35429b71",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "backports already exists, skipping unzipping.\n",
+      "unzipping zip\\base64enc_0.1-3.zip\n",
+      "bslib already exists, skipping unzipping.\n",
+      "cachem already exists, skipping unzipping.\n",
+      "checkmate already exists, skipping unzipping.\n",
+      "cli already exists, skipping unzipping.\n",
+      "cluster already exists, skipping unzipping.\n",
+      "unzipping zip\\colorspace_2.1-1.zip\n",
+      "unzipping zip\\data.table_1.17.2.zip\n",
+      "digest already exists, skipping unzipping.\n",
+      "evaluate already exists, skipping unzipping.\n",
+      "fansi already exists, skipping unzipping.\n",
+      "unzipping zip\\farver_2.1.2.zip\n",
+      "unzipping zip\\fastmap_1.2.0.zip\n",
+      "fontawesome already exists, skipping unzipping.\n",
+      "unzipping zip\\foreign_0.8-90.zip\n",
+      "unzipping zip\\Formula_1.2-5.zip\n",
+      "fs already exists, skipping unzipping.\n",
+      "ggplot2 already exists, skipping unzipping.\n",
+      "glue already exists, skipping unzipping.\n",
+      "gridExtra already exists, skipping unzipping.\n",
+      "gtable already exists, skipping unzipping.\n",
+      "highr already exists, skipping unzipping.\n",
+      "unzipping zip\\Hmisc_5.2-3.zip\n",
+      "unzipping zip\\htmlTable_2.4.3.zip\n",
+      "htmltools already exists, skipping unzipping.\n",
+      "htmlwidgets already exists, skipping unzipping.\n",
+      "isoband already exists, skipping unzipping.\n",
+      "jquerylib already exists, skipping unzipping.\n",
+      "jsonlite already exists, skipping unzipping.\n",
+      "knitr already exists, skipping unzipping.\n",
+      "labeling already exists, skipping unzipping.\n",
+      "unzipping zip\\lattice_0.22-7.zip\n",
+      "lifecycle already exists, skipping unzipping.\n",
+      "magrittr already exists, skipping unzipping.\n",
+      "unzipping zip\\MASS_7.3-65.zip\n",
+      "unzipping zip\\Matrix_1.7-3.zip\n",
+      "unzipping zip\\memoise_2.0.1.zip\n",
+      "unzipping zip\\mgcv_1.9-3.zip\n",
+      "mime already exists, skipping unzipping.\n",
+      "unzipping zip\\nnet_7.3-20.zip\n",
+      "pillar already exists, skipping unzipping.\n",
+      "pkgconfig already exists, skipping unzipping.\n",
+      "R6 already exists, skipping unzipping.\n",
+      "rappdirs already exists, skipping unzipping.\n",
+      "unzipping zip\\RColorBrewer_1.1-3.zip\n",
+      "rlang already exists, skipping unzipping.\n",
+      "rmarkdown already exists, skipping unzipping.\n",
+      "rpart already exists, skipping unzipping.\n",
+      "unzipping zip\\rstudioapi_0.17.1.zip\n",
+      "unzipping zip\\sass_0.4.10.zip\n",
+      "scales already exists, skipping unzipping.\n",
+      "unzipping zip\\stringi_1.8.7.zip\n",
+      "stringr already exists, skipping unzipping.\n",
+      "tibble already exists, skipping unzipping.\n",
+      "unzipping zip\\tinytex_0.57.zip\n",
+      "unzipping zip\\utf8_1.2.5.zip\n",
+      "vctrs already exists, skipping unzipping.\n",
+      "viridisLite already exists, skipping unzipping.\n",
+      "unzipping zip\\viridis_0.6.5.zip\n",
+      "withr already exists, skipping unzipping.\n",
+      "unzipping zip\\xfun_0.52.zip\n",
+      "unzipping zip\\yaml_2.3.10.zip\n"
+     ]
+    }
+   ],
+   "source": [
+    "zip_files = list(zip_path.glob(\"*.zip\"))\n",
+    "await process_zip_files(zip_files, unzip_path)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "b98130aa",
+   "execution_count": 21,
+   "id": "2fee0ae9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# set up and clean up the folders\n",
+    "folders = [Path(\".\") / \"zip\", Path(\".\") / \"unzip\"]\n",
+    "import shutil\n",
+    "\n",
+    "for folder in folders:\n",
+    "    if not folder.exists():\n",
+    "        folder.mkdir()\n",
+    "    else:\n",
+    "        shutil.rmtree(folder)\n",
+    "        folder.mkdir()"
+   ]
   }
  ],
  "metadata": {
