--- a/data/analysis/sfa.ipynb
+++ b/data/analysis/sfa.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,11 +62,16 @@
     "    exposure_on_target_too=True,\n",
     "):\n",
     "\n",
-    "    # aggregate\n",
+    "    df = df.copy()\n",
+    "\n",
+    "    # placeholder col for segment column\n",
     "    if seg_col is None:\n",
-    "        seg_col = \"_seg\"# placeholder for segment column\n",
+    "        seg_col = \"_seg\"\n",
+    "        if seg_col in df.columns:\n",
+    "            raise ValueError(f\"Column '{seg_col}' is reserved, change column name.\")\n",
     "        df[seg_col] = \"all\"\n",
     "\n",
+    "    # aggregate\n",
     "    agg_dict = {}\n",
     "    agg_dict[\"count\"] = (target_col, np.size)\n",
     "    agg_dict[target_col] = (target_col, \"sum\")\n",
@@ -85,7 +90,6 @@
     "    grps = _.groupby(seg_col, dropna=False, observed=False)\n",
     "    for name, group in grps:\n",
     "        group[\"count_dist\"] = group[\"count\"].div(group[\"count\"].sum())\n",
-    "        # add back to the original DataFrame\n",
     "        _.loc[group.index,[\"count_dist\"]] = group[[\"count_dist\"]]\n",
     "\n",
     "    # rates\n",
@@ -93,7 +97,6 @@
     "    for name, group in grps:\n",
     "        group[f\"{target_col}_dist\"] = group[target_col].div(group[target_col].sum())\n",
     "        group[f\"{target_col}_rate\"] = group[target_col].div(group[\"count\"])\n",
-    "        # add back to the original DataFrame\n",
     "        _.loc[group.index,[f\"{target_col}_dist\", f\"{target_col}_rate\"]] = group[[f\"{target_col}_dist\", f\"{target_col}_rate\"]]\n",
     "\n",
     "    # exp rates\n",
@@ -102,7 +105,7 @@
     "        for name, group in grps:\n",
     "            group[f\"{tar_exp}_dist\"] = group[tar_exp].div(group[tar_exp].sum())\n",
     "            group[f\"{tar_exp}_rate\"] = group[tar_exp].div(group[exposure_col])\n",
-    "            # add back to the original DataFrame\n",
+    "\n",
     "            _.loc[group.index,[f\"{tar_exp}_dist\", f\"{tar_exp}_rate\"]] = group[[f\"{tar_exp}_dist\", f\"{tar_exp}_rate\"]]\n",
     "\n",
     "    if seg_col == \"_seg\":\n",
@@ -113,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,12 +126,13 @@
     "\n",
     "    df2 = df.copy()\n",
     "\n",
+    "    # add dummy index for single level\n",
     "    if df2.index.nlevels == 1:\n",
-    "        # add dummy index for single level\n",
     "        df2.index = pd.MultiIndex.from_product([[\"all\"], df2.index], names=[\"all\", df2.index.name])\n",
     "    elif len(df2.index.levels) > 2:\n",
     "        raise ValueError(f\"index levels in input can only be 1 or 2, {df2.index.levels = }\")\n",
     "\n",
+    "    # plot for each segment\n",
     "    segs = df2.index.levels[0]\n",
     "\n",
     "    for seg in segs:\n",
@@ -137,7 +141,6 @@
     "\n",
     "        fig, ax = plt.subplots(1, 2, figsize=figsize)\n",
     "        \n",
-    "        # add a title to the figure\n",
     "        if segs.size > 1:\n",
     "            fig.suptitle(f\"{seg}\", fontsize=16)\n",
     "\n",
@@ -176,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +237,7 @@
          "type": "float"
         }
        ],
-       "ref": "44ee4a36-ec68-47df-b9e9-f0721ec3fafa",
+       "ref": "75636bb9-8f96-4abe-94e3-ba7eb9d9766f",
        "rows": [
         [
          "('female', 'child')",
@@ -412,7 +415,7 @@
        "       man              0.277315  "
       ]
      },
-     "execution_count": 115,
+     "execution_count": 144,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +536,7 @@
          "type": "float"
         }
        ],
-       "ref": "3e2fcbe9-b93c-4f4c-b601-e1db64810803",
+       "ref": "2c599c8e-f6f2-4eb1-b392-7251ce7fc9c9",
        "rows": [
         [
          "[0.42, 20.315)",
@@ -670,7 +673,7 @@
        "NaN                178        53        0.20           0.15           0.30"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +738,7 @@
          "type": "float"
         }
        ],
-       "ref": "0b8c9e78-26e3-46f5-8d30-0a74f24120bb",
+       "ref": "d5a4428d-6957-4e1f-8784-a9171cf5d026",
        "rows": [
         [
          "[-inf, 0.0)",
@@ -889,7 +892,7 @@
        "NaN            177.0        52        0.20           0.15           0.29"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -954,7 +957,7 @@
          "type": "float"
         }
        ],
-       "ref": "ac5e32cb-c819-4cc2-be24-8b4a5682b36c",
+       "ref": "3c622015-c0d0-4d1c-930d-5a0526c2239a",
        "rows": [
         [
          "0",
@@ -1074,7 +1077,7 @@
        "3+               15         4        0.02           0.01           0.27"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
